<resources>
    <string name="app_name">mobile_assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_fragment">Workout Fragment</string>
    <string name="water_tracker_fragment">Water Tracker Fragment</string>
    <string name="sleep_tracker_fragment">Sleep Tracker Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="nutrition_tracker">Nutrition Tracker</string>
    <string name="workout">Workout</string>
    <string name="water">Water</string>
    <string name="nutritions">Nutritions</string>
    <string name="sleep">Sleep</string>
    <string name="profile">Profile</string>
    <string name="started_title">Fitness Buddy</string>

    <string name="sub_title">Welcome !
    <br><font color="#486D86"><b>Login</b></font> If you already have an account.</br>
        <br><font color="#486D86"><b>Register</b></font> Get started.</br></string>

    <string name="illustration_img">Illustration Image</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="login_title">Login</string>

    <string name="login_sub_title">
        <font color="#486D86"><b>Login</b></font> if you already have an account.
    </string>

    <string name="login_email">Your email address</string>
    <string name="add_water">add water</string>
    <string name="add_sleep">add sleep</string>
    <string name="_250_ml">250 ML</string>
    <string name="next_reminder">Next Reminder</string>
    <string name="bed_record_time_text">9:30 am</string>
    <string name="wakeup_record_time_text">9:30 am</string>
    <string name="_9_30_am">9:30 am</string>
    <string name="edit_reminder_button">edit reminder button</string>
    <string name="today_s_record">Today\'s Record</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="textPassword">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="havent_account">Dont have an account yet? <font color="#486D86"><b> Register</b></font></string>
    <string name="register_title">Register</string>
    <string name="register_name">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_account">Already have an account? <font color="#486D86"><b> Login</b></font></string>
    <string name="home_title">Welcome</string>
    <string name="home_sub_title">Enjoy using it !!!</string>
    <string name="button_logout">Logout</string>
    <string name="sleephours">10 Hours</string>
    <string name="wakeup_title">Wake Up Time</string>
    <string name="bedtime_title">Bed Time</string>
    <string name="weekly_records">Weekly Records</string>
    <string name="weekly_sleep_intake_completion">Weekly Sleeping Completion</string>
    <string name="sleep_tracker_report">Sleeping Tracker Report</string>
    <string name="weekly_average">Weekly Average</string>
    <string name="title_activity_water_reminder_settings">WaterReminderSettings</string>
    <string name="reminder_interval">Reminder Interval</string>
    <string name="reminder_notifications">Reminder Notifications</string>
    <string name="sound">Sound</string>
    <string name="sound_type">Sound Type</string>
    <string name="vibrant">Vibrant</string>
    <string name="weekly_water_intake_completion">Weekly Water Intake Completion</string>
    <string name="water_tracker_report">Water Tracker Report</string>
    <string name="monthly_average">Monthly Average</string>
    <string name="average_completion">Average Completion</string>
    <string name="drink_frequency">Drink Frequency</string>
    <string-array name="reminder_intervals">
        <item>No Reminder</item>
        <item>Every 5 seconds</item>
        <item>Every 30 minutes</item>
        <item>Every 60 minutes</item>
        <item>Every 90 minutes</item>
        <item>Every 120 minutes</item>
    </string-array>
    <string-array name="sound_types">
        <item>Silent</item>
        <item>Ringtone</item>
        <item>Alarm</item>
        <item>Notification</item>
    </string-array>
    <string name="daily_routine_target">Daily Target: %d Routine</string>
    <string-array name="arrForCustomWorkOut">
        <item>Reps</item>
        <item>Duration (seconds)</item>
    </string-array>
    <string name="Amount_routine_string">%d ROUTINE</string>
    <string name="add_calories">add calories</string>
    <string name="calories_progress">%s CALS</string>
    <string name="calories_target">Daily Target: 2400 cals</string>
    <string name="target_text">Target</string>
    <string name="calories_left">2400 calories to go</string>
    <string name="calories_input">%s cals</string>
    <string name="food">Maggie Mee</string>
    <string name="food_time">LUNCH</string>
    <string name="select_type">Select Type</string>
    <string name="popular_foods">Popular Foods</string>
    <string name="stop_sleep">Stop sleep</string>
    <string name="play_sleep">Play sleep</string>


    <string-array name="filterByExercise">
        <item>Workout Name</item>
        <item>Body Part</item>
    </string-array>

    <string name="targetBodyPart">Targeted Body Part:%s</string>

    <string name="workoutTimer">%d Sec</string>
    <string name="workoutLeft">%d/%d Exercise</string>
    <string name="reminder">Reminder</string>

</resources>