<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_primary_color"
    android:padding="20dp"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/started_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp" />

    <TextView
        android:id="@+id/login_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="20sp"
        android:text="@string/sub_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="69dp" />

    <ImageView
        android:id="@+id/img_illustration_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/illustration_img"
        android:src="@drawable/illustration_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Login Button -->

    <!--Register Button -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_login"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>