<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginHomeActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAlignment="center"
        style="@style/LoginTitle" />

    <TextView
        android:id="@+id/home_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/home_sub_title"
        android:textStyle="bold"
        android:textAlignment="center"
        style="@style/LoginSubTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_logout"
        style="@style/ButtonGreen" />

</LinearLayout>