<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NutritionTrackerFragment">




    <Button
        android:id="@+id/calories_history_btn"
        style="@style/custom_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:contentDescription="check calories history"
        android:drawableRight="@drawable/history"
        android:text="History"
        android:textColor="#515151"
        android:textSize="12sp"
        app:iconPadding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/calories_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calories_record"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/calories_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/today_s_record"
        android:textColor="@color/cardContent"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesReminderCard" />

    <ProgressBar
        android:id="@+id/calories_bar"
        style="@style/CircleCaloriesBar"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="60dp"
        android:progress="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_calories_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@drawable/add_calories"
        android:contentDescription="@string/add_calories"
        app:layout_constraintBottom_toBottomOf="@+id/calories_bar"
        app:layout_constraintEnd_toEndOf="@+id/calories_bar"
        app:layout_constraintStart_toStartOf="@+id/calories_bar"
        app:layout_constraintTop_toTopOf="@+id/calories_bar" />

    <ImageButton
        android:id="@+id/edit_calories_btn"
        android:layout_width="25dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="edit calories"
        android:src="@drawable/edit_pen"
        app:layout_constraintBottom_toBottomOf="@+id/calories_target"
        app:layout_constraintStart_toEndOf="@+id/calories_target"
        app:layout_constraintTop_toTopOf="@+id/calories_target"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_calories_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/calories_progress"
        android:textColor="#BD7D00"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_bar" />

    <TextView
        android:id="@+id/calories_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_target"
        android:textColor="#57595C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calories_progress" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/caloriesReminderCard"
        style="@style/card_layout"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="10dp"
        app:contentPaddingLeft="14dp"
        app:contentPaddingRight="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_target"
        app:strokeColor="@color/cardBorder"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reminderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/target_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calories_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calories_left"
                android:textColor="@color/cardContent"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/target_title"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/caloriesHistoryCard"
        style="@style/card_layout"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:contentPadding="10dp"
        app:contentPaddingLeft="14dp"
        app:contentPaddingRight="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_record"
        app:strokeColor="@color/cardBorder"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calories_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_record">


            <ImageView
                android:id="@+id/food_image"
                android:layout_width="41dp"
                android:layout_height="40dp"
                android:contentDescription="food image"
                android:src="@drawable/lunch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/calories_record_dltbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:src="@drawable/rubbishbin"
                app:layout_constraintBottom_toBottomOf="@+id/calories_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.652"
                app:layout_constraintStart_toEndOf="@+id/calories_input"
                app:layout_constraintTop_toTopOf="@+id/calories_input"
                app:layout_constraintVertical_bias="0.666" />

            <TextView
                android:id="@+id/calories_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/calories_input"
                android:textColor="#976300"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/food"
                android:textColor="@color/cardContent"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/food_image" />

            <TextView
                android:id="@+id/calories_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:text="@string/food_time"
                android:textColor="@color/cardContent"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/food_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.041" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>